Finished supplierplan Still has two mistakes: Supplierstunde can be entered at inappropiate time classname is shown inline with supplierplan